--- a/techPad-frontend/public/index.html
+++ b/techPad-frontend/public/index.html
@@ -10,6 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
